# Smart-Trip-Planner

./: README.md
.github/workflows/: backend.yml  flutter.yml
backend/: .env  .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
backend/src/apps/: conftest.py
backend/src/apps/accounts/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/src/apps/accounts/migrations/: 0001_initial.py
backend/src/apps/accounts/tests/: test_auth.py
backend/src/apps/common/: exceptions.py  logging.py  middleware.py
backend/src/apps/trips/: admin.py  consumers.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/src/apps/trips/migrations/: 0001_initial.py  0002_phase2.py  0003_chat_message.py  0004_bonus_features.py
backend/src/apps/trips/tests/: test_chat.py  test_expenses.py  test_invites.py  test_itinerary.py  test_polls.py  test_trips.py
backend/src/config/: asgi.py  routing.py  urls.py  wsgi.py
backend/src/config/settings/: base.py  dev.py
backend/src/smart_trip_planner_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/staticfiles/: staticfiles.json
frontend/: README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/ios/Runner/: Info.plist
frontend/lib/: main.dart
frontend/test/: auth_bloc_test.dart  chat_bloc_test.dart  chat_tab_test.dart  itinerary_bloc_test.dart  itinerary_tab_test.dart  polls_bloc_test.dart  trips_bloc_test.dart  trips_list_screen_test.dart
frontend/web/: index.html  manifest.json
(+157 files in other folders)
